--- a/package.json
+++ b/package.json
@@ -1,16 +1,42 @@
 {
-  "name": "stem-sdk",
+  "name": "@cherrydotfun/stem-sdk",
+  "scope": "@cherrydotfun",
   "version": "1.0.0",
-  "description": "",
+  "description": "SDK for the Stem protocol on Solana: account abstractions, peer-to-peer chat, protocol transactions.",
   "license": "MIT",
-  "author": "",
+  "author": "Cherry(dot)fun Developers",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/cherrydotfun/stem-sdk"
+  },
   "type": "commonjs",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "readme.md"
+  ],
+  "keywords": [
+    "solana",
+    "sdk",
+    "stem",
+    "blockchain",
+    "chat",
+    "borsh"
+  ],
+  "engines": {
+    "node": ">=16"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
+    "prepare": "npm run build"
   },
   "dependencies": {
     "@solana/web3.js": "^1.98.2",
     "borsh": "^2.0.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.8.3"
   }
 }
